--- a/components/aud2-oct24-1/overlays/development/deployment-patch.yaml
+++ b/components/aud2-oct24-1/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: aud2-oct24-1
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-ai-dev/ai-template-bootstrap-app:latest # use pre-built to bootstrap 
-        name: app-inference 
+        - image: quay.io/maysunfaisal/aud2-oct24-1:726b2f523dc14ca7e10c1dc262899c1f90fd3920@sha256:e22576512003db14d992c91b92169058b2c3651ef30257b78981526c0d57feec # use pre-built to bootstrap 
+          name: app-inference
